# AgentRelay

./: HANDOVER.md  README.md  mcp_server.py  pyproject.toml
src/agent_relay/: __init__.py  __main__.py  backend_acp.py  handlers.py  manager.py  server.py
src/agent_relay/backends/: __init__.py  acp.py  mock.py
tests/: conftest.py  test_manager.py  test_mcp_server.py  test_mcp_tools.py  test_mock_agent.py
tests/mock/: __init__.py  mock_agent.py  mock_job.py  mock_manager.py
