[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-relay"
version = "0.1.0"
description = "MCP-based orchestration service for delegating work to sub-agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
agent-relay = "agent_relay.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_relay"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
